# rust-crud-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  models.rs
src/controllers/: house.rs
src/models/: house.rs
